--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "pixi.js": "^5.0.4"
+    "pixi.js": "^5.0.4",
+    "d3-ease": "^1.0.5"
   },
   "devDependencies": {
+    "@types/d3-ease": "^1.0.8",
     "html-webpack-plugin": "^5.5.0",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
